--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "helmet": "^3.21.2",
     "knex": "^0.20.2",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^7.14.0"
   }
 }
