--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "nodemon": "^2.0.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.2",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.14.0"
   }
 }
